--- a/css/main.css
+++ b/css/main.css
@@ -1,47 +1,21 @@
+@import 'layout.css';
+@import 'style.css';
+
 body {
-	background: #ecfd83;
+	background: #017374;
 }
 
 header {
-	background: #c3fc80;
+	background: #D0FEFE;
 }
 
 footer {
-	background: #75fa7c;
+	background: #26F7FD;
 }
 
 main {
-	background: #ecf5fc;
+	background: #CEA2FD;
 }
 
-nav {
-	background: #c5e5fc;
-}
 
-div {
-	background: #7ad8fc;
-}
 
-p {
-	background: #fee1da;
-}
-
-ul {
-	background: #fdb1d9;
-}
-
-article {
-	background: #fb84d6;
-}
-
-section {
-	background: #7ecafa;
-}
-
-h1 {
-	background: #88f994;
-}
-
-h2 {
-	background: #f7e3f5;
-}
