--- a/css/main.css
+++ b/css/main.css
@@ -2,19 +2,19 @@
 @import 'style.css';
 
 body {
-	background: #017374;
+	background: #42B395;
 }
 
 header {
-	background: #D0FEFE;
+	background: #017371;
 }
 
 footer {
-	background: #26F7FD;
+	background: #56FCA2;
 }
 
 main {
-	background: #CEA2FD;
+	background: #0E87CC;
 }
 
 
